# hbm_fragmentation_guard_sim

./: CHANGELOG.md  CITATION.cff  DISCLAIMER.md  MANIFEST.in  README.md  bench.py  bench_baseline.json  pyproject.toml  requirements.txt  robots.txt  run_sim.py
.github/workflows/: bench_regression.yml  deploy-site.yml  test.yml
blog/: hbm-fragmentation-guard.html  sitemap-blog.xml
control/: safety_gate.py  scheduler.py
dashboard/: README.md  app.py  requirements.txt
docs/: EXTENDING.md  INTERPRETING_OUTPUT.md  POLICIES.md  TRACE_FORMAT.md
docs/site/: index.html  robots.txt  script.js  sitemap.xml  styles.css
memory/: allocator.py  fragmentation.py
policy/: baselines.py  clockpro.py  confidence_gated.py
tests/: conftest.py  test_allocator.py  test_bench_smoke.py  test_confidence_policy.py  test_fragmentation.py  test_safety_gate.py
tools/: visualize_fragmentation.py  visualize_timeline.py
traces/: README.md  checkpoint_restore.jsonl  fragmentation_stressor.jsonl  llm_kvcache_growth.jsonl  moe_expert_swap.jsonl  moe_load_imbalance.jsonl  multi_tenant_inference.jsonl  schema.json  transformer_prefill_decode.jsonl
viz/: ascii_map.py
workloads/: README.md  gen_checkpoint_restore.py  gen_moe_load_imbalance.py  gen_multi_tenant_inference.py  gen_transformer_prefill_decode.py  llama3_70b_inference_mock.jsonl
