[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hbm-frag-sim"
version = "3.3.0"
description = "Reference simulator and benchmark harness for HBM residency control and fragmentation guard policies"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Manish Keshav Lachwani", email = "mlachwani@gmail.com" }]
keywords = ["HBM", "memory", "fragmentation", "GPU", "AI", "simulator", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.scripts]
hbm-sim = "run_sim:main"
hbm-bench = "bench:main"

[project.optional-dependencies]
dashboard = ["streamlit>=1.32", "plotly>=5.20"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
